--- a/src/main/resources/templates/splash.html
+++ b/src/main/resources/templates/splash.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
+    <title>Sign In / Register!</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen" />
+    <link href="../static/css/splash.css"
+          th:href="@{css/splash.css}" rel="stylesheet" media="screen"/>
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+            th:src="@{/webjars/jquery/2.2.1/jquery.min.js}"></script>
 </head>
 <body>
-<h1>Splash!</h1>
+<div class="col-sm-4 container float-center">
+    <form class="form-signin horizontal" method="POST" action="/login">
+        <h2 class="form-signin-heading">Sign In</h2>
+        <div class="form-group">
+            <label for="inputEmail" class="sr-only">Email Address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required="required" th:autofocus="autofocus" />
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required" />
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="remember-me" /> Remember me
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+    </form>
+
+</div> <!-- /container -->
 </body>
 </html>
