--- a/src/main/resources/templates/splash.html
+++ b/src/main/resources/templates/splash.html
@@ -11,7 +11,7 @@
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
             th:src="@{/webjars/jquery/2.2.1/jquery.min.js}"></script>
 </head>
-<body>
+<body background="img/binding_light.png">
 <div class="col-sm-4 container float-center">
     <form class="form-signin horizontal" method="POST" action="/login">
         <h2 class="form-signin-heading">Sign In</h2>
