--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,22 +6,23 @@
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
-    <link href="../static/css/splash.css"
+    <link href="../static/css/login.css"
           th:href="@{css/splash.css}" rel="stylesheet" media="screen"/>
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
             th:src="@{/webjars/jquery/2.2.1/jquery.min.js}"></script>
 </head>
 <body background="img/paper_2.png">
 <div class="col-sm-4 container float-center">
-    <form class="form-signin horizontal" method="POST" action="/login">
+    <div th:if="${param.error}">Invalid username and password.</div>
+    <form class="form-signin horizontal" th:action="@{/login}" method="POST">
         <h2 class="form-signin-heading">Sign In</h2>
         <div class="form-group">
-            <label for="inputEmail" class="sr-only">Email Address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required="required" th:autofocus="autofocus" />
+            <label for="username" class="sr-only">Email Address</label>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Email Address" required="required" th:autofocus="autofocus" />
         </div>
         <div class="form-group">
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required" />
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="required" />
         </div>
         <div class="checkbox">
             <label>
