--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <title>Register</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen" />
+    <link href="../static/css/general.css"
+          th:href="@{css/general.css}" rel="stylesheet" media="screen"/>
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+            th:src="@{/webjars/jquery/2.2.1/jquery.min.js}"></script>
 </head>
-<body>
+<body background="img/paper_2.png">
+<div class="col-sm-4 container float-center">
+    <div th:if="${param.error}">Invalid details entered.</div>
+    <form class="form-signin horizontal" th:action="@{/register}" method="POST">
+        <h2 class="form-signin-heading">Sign In</h2>
+        <div class="form-group">
+            <label for="first-name" class="sr-only">First Name</label>
+            <input type="text" id="first-name" name="firstName" class="form-control" placeholder="First Name" required="required" th:autofocus="autofocus" />
+        </div>
+        <div class="form-group">
+            <label for="last-name" class="sr-only">Last Name</label>
+            <input type="test" id="last-name" name="lastName" class="form-control" placeholder="Last Name" required="required" />
+        </div>
+        <div class="form-group">
+            <label for="email" class="sr-only">Email</label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Email" required="required" />
+        </div>
+        <div class="form-group">
+            <label for="referee-level" class="sr-only">Referee Level</label>
+            <select id="referee-level" name="refereeLevel" class="form-control" required="required">
+                <option value="" disabled="true" selected="true">--- Select Level ---</option>
+                <option th:each="i : ${#numbers.sequence(1,10)}" th:value="${i}" th:text="${i}" />
+                <option value="-1">N/A</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="required" />
+        </div>
+        <div class="form-group">
+            <label for="confirm-password" class="sr-only">Confirm Password</label>
+            <input type="password" id="confirm-password" name="confirmPassword" class="form-control" placeholder="Confirm Password" required="required" />
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+    </form>
 
+</div> <!-- /container -->
 </body>
 </html>
