--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,6 +29,10 @@
             <input type="email" id="email" name="email" class="form-control" placeholder="Email" required="required" />
         </div>
         <div class="form-group">
+            <label for="confirm-email" class="sr-only">Email</label>
+            <input type="email" id="confirm-email" name="confirmEmail" class="form-control" placeholder="Confirm Email" required="required" />
+        </div>
+        <div class="form-group">
             <label for="referee-level" class="sr-only">Referee Level</label>
             <select id="referee-level" name="refereeLevel" class="form-control" required="required">
                 <option value="" disabled="true" selected="true">--- Select Level ---</option>
