Now displays error on registration

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,12 +25,21 @@
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="required" />
         </div>
         <div class="checkbox">
-            <label>
-                <input type="checkbox" value="remember-me" /> Remember me
+            <label for="remember">
+                <input id="remember" name="remember" type="checkbox" value="remember-me" /> Remember me
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+        <div class = "form-group">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+        </div>
     </form>
+
+    <div class="text-center">
+        <div class="form-group">
+            Don't have an account?  <a href="/register">Sign up here!</a>
+        </div>
+    </div>
+
 
 </div> <!-- /container -->
 </body>
