--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,10 +13,10 @@
 </head>
 <body background="img/paper_2.png">
 <div class="col-sm-4 container float-center">
-    <form class="form-signin horizontal" name="registrationForm" id="registration-form" th:object="${accountCreationDto}" th:action="@{/register}" method="POST">
+    <form class="form-signin horizontal" th:object="${accountCreationDto}" th:action="@{/register}" method="POST">
         <h2 class="form-signin-heading">Register</h2>
-        <div th:if="${#fields.hasErrors()}">
-            <p th:each="err : ${#fields.errors()}" th:text="${err}">...</p>
+        <div th:if="${#fields.hasAnyErrors()}">
+            <p th:each="err : ${#fields.allErrors()}" th:text="${err}">...</p>
         </div>
         <div class="form-group">
             <label for="first-name" class="sr-only">First Name</label>
