--- a/src/main/resources/templates/respect-form.html
+++ b/src/main/resources/templates/respect-form.html
@@ -51,9 +51,11 @@
 
             <form action="confirmation" method="post" id="respect-form">
                 <table class="table table-bordered table-condensed">
+                    <col width="30%" />
+                    <col width="70%" />
                     <tr>
                         <td>
-                            <font color="red">*Required</font>
+                            <p class="red">*Required</p>
                         </td>
                     </tr>
                     <tr>
