--- a/src/main/resources/static/css/respect-form.css
+++ b/src/main/resources/static/css/respect-form.css
@@ -2,6 +2,10 @@ textarea {
     resize: vertical;
 }
 
+label.radio {
+    padding-left: 7%;
+}
+
 .table-body {
     margin-right: 30%;
     margin-left: 30%;
