--- a/src/main/resources/templates/respect-form.html
+++ b/src/main/resources/templates/respect-form.html
@@ -8,8 +8,35 @@
           rel="stylesheet" media="screen" />
     <link href="../static/css/general.css"
           th:href="@{css/respect-form.css}" rel="stylesheet" media="screen"/>
+    <link href="https://cdn.jsdelivr.net/jquery.ui/1.11.4/jquery-ui.min.css"
+          th:href="@{/webjars/jquery-ui/1.9.2/css/smoothness/jquery-ui-1.9.2.custom.min.css}" rel="stylesheet" media="screen"/>
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
-            th:src="@{/webjars/jquery/2.2.1/jquery.min.js}"></script>
+            th:src="@{/webjars/jquery/2.2.1/jquery.min.js}" />
+    <script src="https://cdn.jsdelivr.net/jquery.ui/1.11.4/jquery-ui.min.js"
+            th:src="@{/webjars/jquery-ui/1.9.2/js/jquery-ui-1.9.2.custom.min.js}" />
+    <script type="text/javascript">
+        $(function () {
+            $('#date').datepicker({ dateFormat: 'yy-mm-dd' });
+        });
+    </script>
+    <div class = "navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <div class="collapse navbar-collapse navHeaderCollapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="dashboard" class="navbar-brand">Dashboard</a></li>
+                    <li><a href="form" class="navbar-brand">Form</a></li>
+                    <li th:if="${isAdmin}"><a href="admin" class="navbar-brand">Admin</a></li>
+                    <li><a href='logout' class="navbar-brand">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </head>
 <body background="img/paper_2.png">
 <center>
